# agent-webkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.test.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.changeset/: README.md  config.json  initial-release.md
.github/workflows/: ci.yml  release-js.yml  release-pypi.yml
docs/: package.json  wire-protocol.md
examples/chat-demo/: README.md  index.html  package.json  playwright.config.ts  vite.config.ts
examples/genui-demo/: README.md  index.html  package.json  playwright.config.ts  vite.config.ts
examples/server-fastapi/: README.md  main.py
fixtures/: ask_user_question.jsonl  deny_with_interrupt.jsonl  genui_render.jsonl  image_attachment.jsonl  interrupt_mid_stream.jsonl  mcp_status_change.jsonl  multi_tool.jsonl  multi_turn.jsonl  plain_qa.jsonl  read_allow.jsonl  streaming_long.jsonl  tool_error.jsonl
server-reference/: README.md  pyproject.toml
server-reference/server/: __init__.py  auth.py  event_log.py  main.py  sdk_bridge.py  session.py
server-reference/server/extras/: __init__.py
tests/: conftest.py
tests/contract/: test_event_schemas.py
tests/fake_claude_sdk/: __init__.py
tests/integration/: conftest.py  test_genui_real_sdk.py  test_pg_artefact_store.py  test_pg_session_store.py  test_pg_store_with_real_sdk.py  test_real_sdk_http.py  test_real_sdk_smoke.py
tests/properties/: test_event_log_properties.py  test_permission_router_properties.py  test_pg_session_store_properties.py  test_sdk_bridge_properties.py
(+39 files in other folders)
