[project]
name = "agent-webkit-server"
version = "0.1.0"
description = "Reference FastAPI server exposing the Claude Agent SDK over agent-webkit's HTTP+SSE wire protocol."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "sse-starlette>=2.1",
  "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
